--- a/proposta_1.html
+++ b/proposta_1.html
@@ -4,9 +4,9 @@
     </head>
     <body>
       <h1>Cabeçalho do site</h1>
-
-      Conteúdo do site
-
+        <main>
+            Isso aqui é o conteúdo da página
+        </main>
       <h4>Rodapé do site</h4>
     </body>
   </html>
