--- a/proposta_1.html
+++ b/proposta_1.html
@@ -5,7 +5,7 @@
     <body>
       <h1>Cabeçalho do site</h1>
         <main>
-            Isso aqui é o conteúdo da página
+            Isso aqui é o conteúdo do site
         </main>
       <h4>Rodapé do site</h4>
     </body>
