--- a/proposta_1.html
+++ b/proposta_1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Proposta um para homepage da empresa</title>
+      <title>Proposta Um para homepage da empresa</title>
     </head>
     <body>
       <h1>Cabeçalho do site</h1>
