--- a/proposta_1.html
+++ b/proposta_1.html
@@ -7,6 +7,6 @@
         <main>
             conteudo do site
         </main>
-      <h4>Rodapé do Site</h4>
+      <h4>Copyright alura</h4>
     </body>
   </html>
